[FIX] point_of_sale: prevent product name background flip
Current behavior:
When the product name is too long and the language is a right to left
language, the background gradients is flipped.

Steps to reproduce:
- Create a PoS product with a long name in Arabic (عر باب
الحرم المدني الفاخر عليقة باب الحرم ريال شاملا الضريبة)
- Set DB language to Arabic
- Open PoS session
- The background gradient is flipped.

opw-3011393

X-original-commit: a446cae460d0b2105d628546a60dec5e0a18ab44

--- a/addons/point_of_sale/static/src/scss/pos.scss
+++ b/addons/point_of_sale/static/src/scss/pos.scss
@@ -1218,6 +1218,13 @@ td {
     opacity: 0.6;
 }
 
+/*rtl:ignore*/
+.pos .product .product-name {
+    background: -webkit-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
+    background:    -moz-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
+    background:     -ms-linear-gradient(-90deg,rgba(255,255,255,0),rgba(255,255,255,1), rgba(255,255,255,1));
+}
+
 /*  ********* The Screens  ********* */
 
 .pos .screen {
